# microsiptp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
base/: global.cpp  global.h
res/: resources.qrc
res/qss/: style.qss
res/qss/theme_dark_medical/: dark_medical.qss
ua/: mycall.cpp  mycall.h  telephone.cpp  telephone.h  ua.cpp  ua.h  uamanager.cpp  uamanager.h
ui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  calldialog.cpp  calldialog.h  calldialog.ui  guidedialog.cpp  guidedialog.h  guidedialog.ui  managermainwindow.cpp  managermainwindow.h  preferencesmainwindow.cpp  preferencesmainwindow.h  preferencesmainwindow.ui  telephonemainwindow.cpp  telephonemainwindow.h  telephonemainwindow.ui  transfercalldialog.cpp  transfercalldialog.h  transfercalldialog.ui
